--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "acl": "~0.4.4",
     "angular-ui-bootstrap": "^1.0.0",
+    "angularjs-scroll-glue": "^2.0.4",
     "async": "^1.3.0",
     "body-parser": "^1.13.1",
     "bower": "^1.4.1",
